2003-09-18  Radek Doulik  <rodo@ximian.com>

	* htmlimage.c: take care for images blocking

	* gtkhtml.c (gtk_html_set_images_blocking): added new method,
	toggles image streams blocking. set_blocking toggles content
	blocking - when enabled, widget is updated after all content is
	loaded, images blocking blocks updates until images are fully
	loaded

2003-09-17  Dan Winship  <danw@ximian.com>

	* testgtkhtml.c: Make this compile with either soup 2.0 or 2.2

2003-09-16  Larry Ewing  <lewing@ximian.com>

	* htmltext.c: remove ;; in several places so it will compile on
	old compilers.

2003-09-04  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (element_parse_font): parse style

2003-09-11  Larry Ewing  <lewing@ximian.com>

	* htmlstyle.c (html_style_add_background_color): use htmlcolor.
	(html_style_add_attribute): parse a few more attributes.

	* htmlstyle.h: switch to using htmlcolor instead of gdkcolor.

	* htmlengine.c (element_parse_table): support display:
	inline-table, move to htmlelement code.
	(element_parse_tr): move to htmlelement code.
	(element_parse_cell): combine parse_th and parse_td logic into one
	function, use htmlelement code.

2003-09-10  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (current_alignment): make alignment only work if we
	cross a block element.
	(html_element_push): don't pop the anon pre until we've pushed it.

	* htmlstyle.c (html_style_add_attribute): add some new atttributes
	to the attribute parsing code.
	(html_style_add_attribute): fix accidental breakage.

	* htmlengine.c: refactor the inline parsers to use html_element
	code.

2003-09-06  Larry Ewing  <lewing@ximian.com>

	* htmltablecell.c (save): use the right tag when closing cells
	(original patch by Roy Rankin).

2003-09-05  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (pop_element_by_type): add new pop element variant
	that takes the display type as an argument.  This cleans up the
	places where we use pop_element to restructure the document as