@@ -2724,6 +2724,13 @@ html_text_set_style_in_range (HTMLText *text, GtkHTMLFontStyle style, HTMLEngine
 		pango_attr_list_change (text->attr_list, attr);
 	}
 
+	if (style & GTK_HTML_FONT_STYLE_FIXED) {
+		attr = pango_attr_family_new (e->painter->font_manager.fixed.face);
+		attr->start_index = start_index;
+		attr->end_index = end_index;
+		pango_attr_list_change (text->attr_list, attr);
+	}
+
 	/* size */
 	if (style & GTK_HTML_FONT_STYLE_SIZE_MASK) {
 		attr = html_pango_attr_font_size_new (style & GTK_HTML_FONT_STYLE_SIZE_MASK);
